--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
                     <h5 class="display-6 text-white">HIGH SCHOOL IS THE</h5>
                     <h1 class="display-4 text-white dream-life">HIGHWAY TO YOUR
                         DREAM LIFE</h1>
-                    <p class="text-white my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quia
-                        sequi eius. Quas, totam aliquid. Repudiandae reiciendis vel excepturi ipsa voluptate dicta!</p>
+                    <h5 class="text-white my-3 school-quote"><i class="fa-solid fa-quote-left"></i><br>
+                        To Read Is One<br> To Understand What You Read Is Another<br>To Learn From What You Understand
+                        Is Something Else<br>
+                        But To Act On What You Learnt Is What Really Matter.<br>
+                        <i class="fa-solid fa-quote-right"></i>
+                    </h5>
                 </div>
             </div>
         </div>
@@ -405,7 +409,19 @@
         </div>
     </section><!-- BLOG -->
 
+    <!-- Motivation Qoute -->
+    <section class="motivation">
+        <div>
+            <i class="fa-solid fa-quote-left"></i>
+        </div>
 
+        <p class="quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sint nam, saepe ea quibusdam fugiat
+            voluptates. Neque ex corrupti eveniet reiciendis? Rerum ad nostrum ut architecto corrupti aliquid
+            vero libero!
+        </p>
+        <h6 class="author">I.S KALOKO</h6>
+    </section> <!-- Motivation Qoute -->
     <!-- CONTACT -->
     <section id="contact">
         <div class="container">
