--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                     <h1 class="display-4 text-white dream-life">HIGHWAY TO YOUR
                         DREAM LIFE</h1>
                     <h5 class="text-white my-3 school-quote"><i class="fa-solid fa-quote-left"></i><br>
-                        To Read Is One<br> To Understand What You Read Is Another<br>To Learn From What You Understand
+                        To Read Is One Thing<br> To Understand What You Read Is Another<br>To Learn From What You
+                        Understand
                         Is Something Else<br>
                         But To Act On What You Learnt Is What Really Matter.<br>
                         <i class="fa-solid fa-quote-right"></i>
@@ -230,8 +231,8 @@
         <div class="container-fluid">
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
-                    <h5 class="text-primary">PROJECTS</h5>
-                    <h1>Our Recent Work</h1>
+                    <h5 class="text-primary">Gallery</h5>
+                    <h1>Get good images from Scarcies</h1>
                     <p>Lorem ipsum dolor sit amet consectetur nisi necessitatibus repellat distinctio eveniet eaque fuga
                         in cumque optio consectetur harum vitae debitis sapiente praesentium aperiam aut</p>
                 </div>
@@ -464,7 +465,7 @@
                         <img class="logo rounded" src="img/scarcies-logo.jpeg" alt="">
                     </div>
                     <div class="col-lg-2">
-                        <h5 class="text-white">Brand</h5>
+                        <h5 class="text-white">Nav Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="#">About</a></li>
                             <li><a href="#">Services</a></li>
