--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="#gallery">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#team">Former Students</a>
@@ -226,8 +226,8 @@
         </div>
     </section><!-- FEATURES -->
 
-    <!-- PROJECTS -->
-    <section id="portfolio">
+    <!-- GALLERY -->
+    <section id="gallery">
         <div class="container-fluid">
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
@@ -243,8 +243,8 @@
                         <img src="img/pro1.jpg" alt="">
                         <div class="overlay">
                             <div>
-                                <h4 class="text-white">Project Title</h4>
-                                <h5 class="text-white">Website Design</h5>
+                                <h4 class="text-white">School Motto</h4>
+                                <h5 class="text-white">Pray and Work</h5>
                             </div>
                         </div>
                     </div>
@@ -254,8 +254,8 @@
                         <img src="img/pro2.jpg" alt="">
                         <div class="overlay">
                             <div>
-                                <h4 class="text-white">Project Title</h4>
-                                <h5 class="text-white">Website Design</h5>
+                                <h4 class="text-white">School Motto</h4>
+                                <h5 class="text-white">Pray and Work</h5>
                             </div>
                         </div>
                     </div>
@@ -265,8 +265,8 @@
                         <img src="img/pro3.jpg" alt="">
                         <div class="overlay">
                             <div>
-                                <h4 class="text-white">Project Title</h4>
-                                <h5 class="text-white">Website Design</h5>
+                                <h4 class="text-white">School Motto</h4>
+                                <h5 class="text-white">Pray and Work</h5>
                             </div>
                         </div>
                     </div>
@@ -276,8 +276,8 @@
                         <img src="img/pro4.jpg" alt="">
                         <div class="overlay">
                             <div>
-                                <h4 class="text-white">Project Title</h4>
-                                <h5 class="text-white">Website Design</h5>
+                                <h4 class="text-white">School Motto</h4>
+                                <h5 class="text-white">Pray and Work</h5>
                             </div>
                         </div>
                     </div>
@@ -287,8 +287,8 @@
                         <img src="img/pro5.jpg" alt="">
                         <div class="overlay">
                             <div>
-                                <h4 class="text-white">Project Title</h4>
-                                <h5 class="text-white">Website Design</h5>
+                                <h4 class="text-white">School Motto</h4>
+                                <h5 class="text-white">Pray and Work</h5>
                             </div>
                         </div>
                     </div>
@@ -298,15 +298,15 @@
                         <img src="img/pro6.jpg" alt="">
                         <div class="overlay">
                             <div>
-                                <h4 class="text-white">Project Title</h4>
-                                <h5 class="text-white">Website Design</h5>
+                                <h4 class="text-white">School Motto</h4>
+                                <h5 class="text-white">Pray and Work</h5>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section><!-- PROJECTS -->
+    </section><!-- Gallery -->
 
     <!-- TEAM -->
     <section id="team">
